# PDF-Importer-Blender

./: .gitattributes  .gitignore  0build_master_output.py  COMPATIBILITY.md  HUMAN_CONFIRMATION.md  README.md  THIRD_PARTY_NOTICES.md  build_release.py  pdfcadcore_sync_check.py  pdfcadcore_sync_manifest.json  preflight_check.py  pyproject.toml
.github/workflows/: auto-release.yml  bl-pdfimporter-ci.yml  release.yml
_LLM_CONTROL_PACK/: QA-2026-06-22_text-mode-parity-status.md
_LLM_CONTROL_PACK/QA/: Q&A_INDEX.md  QA-2026-06-23_text-leader-alignment-fix.md  QA-2026-06-24_sketchup-2017-installer-website-policy.md  QA-2026-06-24_text-mode-verification-matrix.md
blender_pdf_vector_importer/: DEPRECATED.md  __init__.py  cli.py  importer.py  view_focus.py
blender_pdf_vector_importer/adapters/: blender_adapter.py
blender_pdf_vector_importer/core/: PDFDimensionParser.py  PDFDocumentProfiler.py  PDFGenericClassifier.py  PDFGenericRecognizer.py  PDFGeometryCleanup.py  PDFImportConfig.py  PDFPrimitiveExtractor.py  PDFPrimitives.py  PDFRecognition.py  PDFRegions.py  PDFValidation.py  __init__.py  document.py
pdf_vector_importer/: __init__.py  _vendored_pymupdf_extra.py  bl_import_engine.py  bl_text_builder.py  dependency_manager.py  operators.py  preferences.py
scripts/: _headless_import_test.py  smoke_release_zip.py
tests/: test_clean_break.py  test_core_pipeline.py  test_dependency_manager.py  test_import_report_writer.py  test_legacy_adapter_text_modes.py  test_mode_cli.py  test_text_mode_builder.py
