[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pdf-vector-importer"
version = "1.0.47"
description = "PDF vector importer for Blender — BlueCollar Systems"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "BlueCollar Systems" }
]
dependencies = [
  "PyMuPDF>=1.24,<2.0"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["pdf_vector_importer*", "blender_pdf_vector_importer*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
norecursedirs = [
  "dist",
  "build",
  ".git",
  "__pycache__",
]

[tool.ruff]
target-version = "py310"
exclude = [
  "dist",
  "build",
  "__pycache__",
  ".ruff_cache",
  "pdf_vector_importer/lib",
]

[tool.ruff.lint]
select = ["F", "B"]
